# coffee-shop-api

./: .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1bcbe5dfd8d4_add_verification_code_to_users.py  2125f7323875_create_users_table.py  2a8eae7cc1ad_create_users_table.py  74fa1b0b9e3b_add_verification_fields_to_users_model.py  9bca76555dc3_add_verification_fields_to_users.py  b1fca81a9ae2_add_verification_fields_to_users.py  bfd0408dddd8_add_verification_fields_to_users.py  f8406d33cb51_create_users_table.py
app/core/: celery_app.py  config.py  db.py
app/models/: user.py
app/routers/: auth.py  users.py
app/schemas/: token.py  user.py
app/services/: auth.py  email.py  user.py
app/tasks/: worker.py
